<resources>
    <string name="app_name">InstagramApplication</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_email_address">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_btn">Log In</string>
    <string name="signup_btn">Don\'t have an account? Sign up.</string>
    <string name="logo_for_login">Login Logo</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="register_desc">Sign up to see photos and videos from your friends</string>
    <string name="signin_btn">Already have an Account?</string>
    <string name="register_btn">Sign up</string>
    <string name="reg_pass_text">Password</string>
    <string name="hint_reg_pass">Password</string>
    <string name="hint_reg_conf_pass">Confirm Password</string>
    <string name="setupimage">Setup Image</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_bio">Bio</string>
    <string name="text_name">Name</string>
    <string name="text_username">Username</string>
    <string name="text_bio">Bio</string>
    <string name="setup_btn_name">Save Account Details</string>
    <string name="nav_userfeeds">User feeds</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_photo">Photo</string>
    <string name="nav_activityfeeds">Activity feeds</string>
    <string name="nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_fragment_text">Activity Feeds Fragment</string>
    <string name="discover_fragment_text">Discover Fragment</string>
    <string name="photo_fragment_text">Photo Fragment</string>
    <string name="profile_fragment_text">Profile Fragment</string>
    <string name="userfeeds_fragment_text">User Feeds Fragment</string>
    <string name="edit_profile_text">Edit your Profile</string>
    <string name="photos_posted_text">Photos Posted</string>
    <string name="photo_gallery">Gallery</string>
    <string name="photo_camera">Camera</string>

    <!-- Strings for Tab Bar -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_next">Next</string>
    <string name="img_gallery_selected_desc">Gallery Selected Img Desc</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="post_image">Post image</string>
    <string name="text_likes">Likes</string>
    <string name="text_description">description</string>
    <string name="search_by_username">Search by username</string>
    <string name="friend_suggestions">Friend Suggestions</string>
    <string name="search_results">Search Results</string>
    <string name="follow_text">Follow</string>
    <string name="username_text">Username</string>

    <!-- Intent Extras -->
    <string name="selected_image">selected_image</string>
    <string name="string_share">Share</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>

    <!-- Firebase database fields -->
    <string name="dbname_photos">post</string>
    <string name="dbname_user_photos">user_photos</string>

    <!-- Photo types -->
    <string name="new_photo">new_photo</string>
    <string name="user_photo">user_photo</string>
    <string name="title_activity_nearby_friends">NearbyFriends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friends_nearby">FriendsNearby</string>
    <string name="text_uid">uid</string>
    <string name="text_friends">Nearby Users</string>
    <string name="bluetooth_image">Bluetooth image</string>
    <string name="text_user_in_range">Users in your Range. Swipe Right to send.</string>

</resources>
